--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>Iam a web developer</h2>
     <hr>
     <a href="./birthdaywebsite.html">birthday_website</a>
-    <img src=".\filepaths\image\birthday.png"/>
+    <img src=".\image\birthday.png"/>
     <a href="./MOVIE RANKING.html">movie_ranking</a>
-    <img src=".\filepaths\image\movie.png"/>
+    <img src=".\image\movie.png"/>
 </body>
 </html>
